<resources>
    <string name="app_name">Drawer Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="communicate">communicate</string>
    <string name="item5">item5</string>
    <string name="item6">item6</string>
</resources>
