<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/item1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/item2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/item3" />
        <item
            android:id="@+id/nav_item_4"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/item4" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_item5"
                android:icon="@drawable/ic_card_giftcard_black_24dp"
                android:title="@string/item5" />
            <item
                android:id="@+id/nav_item6"
                android:icon="@drawable/ic_card_giftcard_black_24dp"
                android:title="@string/item6" />
        </menu>
    </item>

</menu>
